2006-03-21 Mark Grondona <mgrondona@llnl.gov>

	* edac.spec : Fix permissions in specfile.

2006-03-16 Mark Grondona <mgrondona@llnl.gov>

	* : tag version 0.2.
	
2006-03-14 Mark Grondona <mgrondona@llnl.gov>

	* : Initial commit.

	* : tag version 0.1.

	* src/util/edac-ctl : Fix typo preventing --register-labels from
	  doing anything.

	* src/util/edac-util.c : Generate error if a report is requested
	  but no memory controller data is found in sysfs.